finihsed item component ui implementation

--- a/cloud-shopping/src/constants/colors.scss
+++ b/cloud-shopping/src/constants/colors.scss
@@ -6,5 +6,5 @@ $honeyDew : #F0FFF0;
 $lightYellow: #FFFFE0;
 $snow: #FFFAFA;
 $deepSkyBlue: #00BFFF;
-$Gainsboro: #DCDCDC;
+$gainsboro: #DCDCDC;
 $AntiqueWhite: #FAEBD7;
