added a component for cart item

--- a/cloud-shopping/src/constants/colors.scss
+++ b/cloud-shopping/src/constants/colors.scss
@@ -7,4 +7,5 @@ $lightYellow: #FFFFE0;
 $snow: #FFFAFA;
 $deepSkyBlue: #00BFFF;
 $gainsboro: #DCDCDC;
-$AntiqueWhite: #FAEBD7;
+$antiqueWhite: #FAEBD7;
+$midnightBlue: #191970;
