added new styles

--- a/cloud-shopping/src/constants/colors.scss
+++ b/cloud-shopping/src/constants/colors.scss
@@ -10,3 +10,7 @@ $gainsboro: #DCDCDC;
 $antiqueWhite: #FAEBD7;
 $midnightBlue: #191970;
 $AntiqueWhite: #FAEBD7;
+$silver: #C0C0C0;
+$dodgerBlue: #1E90FF;
+$seaGreen: #2E8B57;
+$black: #000000;
